css/responsive.css
.inside{
    background-color: #f3f3f3;
}
nav h1 {
    padding-top: 25px;
    padding-bottom: 25px;
}

.filter-options{
    display: flex;
    flex-wrap: wrap;
    height: 100%;
    padding-top: 15px;
    padding-bottom: 15px;
}


#restaurants-list{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}


@media screen and (min-width: 320px) and (max-width: 445px) {
    .filter-options h2{
        width: 100%;
     }

     .filter-options select{
        margin-left: 30px;
        margin-right: 30px;
        width: 100%;
     }
}

@media screen and (max-width: 659px) {
    /* style for filter options  */
    .filter-options h2{
        width: 100%;
    }

   /* style for restuarants list */
   #restaurants-list li{
        border: 0;
        border-bottom: 1px solid #ccc;
        font-family: Arial,sans-serif;
        margin: 0 auto;
        min-height: 150px;
        padding: 0 30px 25px;
        text-align: left;
        width: 100%;
        display: flex;
   }
  

    #restaurants-list .restaurant-img {
        background-color: #ccc;
        display: inline-block;
        margin: 25px 25px 0 0;
        max-width: 100%;
        height: 100px;
        min-height: 0;
        min-width: 0;
    }  

    #restaurants-list li h1 {
        font-size: 12pt;
    }

    #restaurants-list li p {
        font-size: 10pt;
    }

    #restaurants-list li a {
        font-size: 8pt; 
        padding: 8px 15px 10px;
    }

}


@media screen and (min-width: 660px) and (max-width: 760px){
    #restaurants-list li {
        margin: 15px 5px;
        min-height: 380px;
        width: 240px;
    }  
}

@media screen and (min-width: 660px){
    #restaurant-container div{
        width: calc((100% - 40px)/2);
        margin-right: 20px
    } 
    #reviews-list li {
        width:calc((100% - 160px)/2);
        margin: 0 10px 30px;
    }
} 

@media screen and (min-width: 1024px){
    .inside #maincontent{
        max-width: 1200px;
        margin: 0 auto;
    }

    .inside #restaurant-container{
        order:1;
        width: 45%;
      }
      
      
      .inside #reviews-container{
        order:3;
      }
      
      .inside #map-container{
        order:2;
        width: 48%;
        border-bottom: 1px solid #d9d9d9;
      }
    
     #map{
         margin-top: 100px;
         height: 600px;
     }
    #restaurant-container div{
       width: 100%;
    } 

    #reviews-list li {
        width:calc((100% - 200px)/3);
        margin: 0 10px 30px;
    } 
}

